fix test after Java 21 making the class final