@@ -76,6 +76,7 @@ dependencies {
 }
 
 test {
+    jvmArgs '--add-opens', 'java.base/java.net=ALL-UNNAMED'
     if (platform.startsWith("mac")) {
         // jvmArgs "-XstartOnFirstThread"
         println("WARNING: tests that touch GUI will fail on Mac due to Cocoa restrictions and Gradle unable to run tests on main thread")
